--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,11 @@ background-color: grey;
   transition: all .2s ease-in-out; 
 }
 
+#fave-icon {
+  height: 50px;
+  float: left;
+}
+
 /* #info-list > li:hover {
   transform: scale(1.2); 
 } */
