adjusted spacing on pictures

--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,10 @@ background-color: grey;
   margin-top:0;
 }
 
+#showcase:nth-of-type(1n+2) {
+  margin-top:30px;
+}
+
 #showcase { 
   transition: all .2s ease-in-out; 
 }
