--- a/css/style.css
+++ b/css/style.css
@@ -261,14 +261,6 @@ background-color: grey;
   margin-top:0;
 }
 
-#showcase { 
-  transition: all .2s ease-in-out; 
-}
-
-#showcase:hover {
-  transform: scale(1.5); 
-}
-
 #info-list {
   margin-top: 30px;
 }
@@ -289,7 +281,9 @@ background-color: grey;
 
 #fave-icon {
   height: 50px;
-  float: left;
+  position: absolute;
+  left: 2px;
+  z-index: 2;
 }
 
 /* #info-list > li:hover {
